--- a/Churras/Empresa.Churras.Domain.Model/Empresa.Churras.Domain.Model.csproj
+++ b/Churras/Empresa.Churras.Domain.Model/Empresa.Churras.Domain.Model.csproj
@@ -3,7 +3,10 @@
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
   </PropertyGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\Kernel\Kernel.Domain.Model\Kernel.Domain.Model.csproj" />
+  </ItemGroup>
 
 </Project>
